# wemon-public

./: CMakeLists.txt  history.txt  install.sh  sample_env.json  update_history  wemon.service  wemon.xml  气象环境监视子系统控制软件-设计与测试.docx
modules/: Findlibboost.cmake  Findlibcfitsio.cmake  Findlibopencv.cmake  Findlibqhy.cmake  Findlibusb.cmake
src/: ADefine.h  AMath.cpp  AMath.h  ATimeSpace.cpp  ATimeSpace.h  AsioTCP.cpp  AsioTCP.h  AsioUDP.cpp  AsioUDP.h  AstroDeviceDef.h  BoostAsioKeep.cpp  BoostAsioKeep.h  BoostInclude.cpp  BoostInclude.h  CameraBase.cpp  CameraBase.h  CameraDefine.h  CloudCamera.cpp  CloudCamera.h  EnvMonitor.cpp  EnvMonitor.h  FocusAutoAlgo.h  GLog.cpp  GLog.h  InvokeSExtractor.cpp  InvokeSExtractor.h  Parameter.cpp  Parameter.h  ProtoFocus.h  ProtocolPDXP.cpp  ProtocolPDXP.h  ReadCloudage.cpp  ReadCloudage.h  SQM.cpp  SQM.h  SerialComm.cpp  SerialComm.h  WeatherStation.cpp  WeatherStation.h  daemon.cpp  (+9 more)
src/CloudCamera/: CameraQHY.cpp  CameraQHY.h  config.h  qhyccdcamdef.h
